Adding the ability to filter received ExtractedEntities